# setter_getter_func

./: CMakeLists.txt  README.md
src/include/: i_setter_getter.h  make_ptr.h
src/src/: main.cpp  make_ptr.cpp  setter_getter.cpp  setter_getter.h
